partially forgot what i added but did remember adding authentication with hashed pins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=BankingSystemV3
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/banking_system
+spring.datasource.username=caseysims
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+#spring.h2.console.enabled=true
